bug fix: heading overlap with nav bar

--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,10 @@ section {
         display: block;
     }
 
+    section {
+        padding: 15rem 4% 2rem;
+    }
+
     nav {
         position: absolute;
         top: 100%;
